6-table-styling-doesn-t-handle-larger-tables Fixed large tables clipping

--- a/_extensions/profinit/profinit_revealjs.scss
+++ b/_extensions/profinit/profinit_revealjs.scss
@@ -36,8 +36,13 @@ strong {
   color: $profinit_red
 }
 
-table {
+.long-table {
+  display: block;
+  overflow-x: auto;
   table-layout: fixed;
+}
+
+table {
   width: 100%;
   border-collapse: collapse;
   border: $table_border solid white;
